Fix footer overflow y

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -528,12 +528,13 @@ iframe {
 		text-align: center;
 		background-color: #FFA7F3;
 		display: flex;
-		height: 2.5rem;
+		height: 2.6rem;
 		position: fixed;
 		bottom: 0;
 		width: 100%;
 		height: 40px;
 		border-top: 1px solid white;
+		overflow: hidden !important;
 
 	}
 
@@ -546,14 +547,14 @@ iframe {
 	}
 
 	footer a:hover {
-		transform: scale(1.2);
+		transform: scale(1.15);
+		overflow: hidden !important;
 	}
 
 
 	#h3-footer {
 		display: none;
 	}
-
 }
 
 @media only screen and (min-width: 767px) {
